--- a/core/core/templates/forms/incident_form.html
+++ b/core/core/templates/forms/incident_form.html
@@ -48,11 +48,14 @@
                     </div>
 
                     <!-- DOB -->
-                    <div class="form-group">
-                        <label>Dob:</label>
-                        <input type="text" id="dob_display" class="form-control" readonly>
-                        <input type="hidden" name="{{ form.dob.name }}" id="{{ form.dob.id_for_label }}">
-                    </div>
+                   <div class="form-group row">
+    <label for="dob_display" class="col-sm-2 col-form-label">DOB:</label>
+    <div class="col-sm-4">
+        <input type="text" id="dob_display" class="form-control form-control-sm" readonly>
+        <input type="hidden" name="{{ form.dob.name }}" id="{{ form.dob.id_for_label }}">
+    </div>
+</div>
+
 
                     <!-- Staff Involved -->
                     <div class="form-group">
