--- a/core/core/templates/forms/incident_form.html
+++ b/core/core/templates/forms/incident_form.html
@@ -48,12 +48,11 @@
                     </div>
 
                     <!-- DOB -->
-                    <div class="form-group row">
-                        <label for="dob_display" class="col-sm-2 col-form-label">DOB:</label>
-                        <div class="col-sm-4">
-                            <input type="text" id="dob_display" class="form-control form-control-sm" readonly>
-                            <input type="hidden" name="{{ form.dob.name }}" id="{{ form.dob.id_for_label }}">
-                        </div>
+                    <div class="form-group">
+                        <label for="dob_display">DOB:</label>
+                        <input type="text" id="dob_display" class="form-control d-inline-block"
+                               style="width: 180px;" readonly>
+                        <input type="hidden" name="{{ form.dob.name }}" id="{{ form.dob.id_for_label }}">
                     </div>
 
 
