Create log service binding issue on selection the carehome

--- a/core/core/templates/pdf_templates/log_pdf.html
+++ b/core/core/templates/pdf_templates/log_pdf.html
@@ -69,9 +69,9 @@ th {
         </tr>
         <tr>
             <td colspan="4">
-                <strong>Care Home:</strong> {{ latest_log.carehome }}<br>
+<!--                <strong>Care Home:</strong> {{ latest_log.carehome }}<br>-->
                 <strong>Service User:</strong> {{ latest_log.service_user }}<br>
-                <strong>Staff:</strong> {{ latest_log.staff_name }}
+<!--                <strong>Staff:</strong> {{ latest_log.staff_name }}-->
             </td>
         </tr>
 
