--- a/core/core/templates/core/sidebar.html
+++ b/core/core/templates/core/sidebar.html
@@ -66,7 +66,7 @@
     </a>
     <div id="abcCollapse" class="collapse" aria-labelledby="headingABC" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="{% url 'abc-dashboard' %}">
+            <a class="collapse-item" href="{% url 'abc_form_list' %}">
                 <i class="fas fa-tachometer-alt fa-sm mr-2"></i>Dashboard
             </a>
             <a class="collapse-item" href="{% url 'fill_abc_form' %}">
@@ -85,7 +85,7 @@
     </a>
     <div id="incidentCollapse" class="collapse" aria-labelledby="headingIncident" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="{% url 'incident-dashboard' %}">
+            <a class="collapse-item" href="{% url 'incident_report_list' %}">
                 <i class="fas fa-tachometer-alt fa-sm mr-2"></i>Dashboard
             </a>
             <a class="collapse-item" href="{% url 'fill_incident_form' %}">
@@ -104,7 +104,7 @@
     </a>
     <div id="logsCollapse" class="collapse" aria-labelledby="headingLogs" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="{% url 'logs-dashboard' %}">
+            <a class="collapse-item" href="{% url 'staff_latest_logs_view' %}">
                 <i class="fas fa-tachometer-alt fa-sm mr-2"></i>Dashboard
             </a>
             <a class="collapse-item" href="{% url 'create-log' %}">
